# pystamper

./: pyproject.toml
src/: enumrates.py  main.py
